[package]
name = "kvs"
version = "0.1.0"
authors = ["Amogh Yermalkar <ayermalkar99@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bson = "2.5.0"
byteorder = "1.4.3"
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
ron = "0.8.0"
serde = "1.0.152"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
